--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "localforage": "^1.10.0",
     "match-sorter": "^8.0.0",
     "react": "^18.3.1",
+    "react-awesome-reveal": "^4.2.14",
     "react-daisyui": "^5.0.5",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
